--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/51b9bf2f41.js" crossorigin="anonymous"></script>
     <title>Destination1</title>
 </head>
 <body>
@@ -54,8 +55,7 @@
                    class="btn btn-outline-light btn-floating m-1"
                    href="#!"
                    role="button"
-                   ><i class="fab fa-facebook-f"></i
-                  ></a>
+                   ><i class="fa-brands fa-facebook"></i></a>
         
                 <!-- Twitter -->
                 <a
@@ -78,8 +78,7 @@
                    class="btn btn-outline-light btn-floating m-1"
                    href="#!"
                    role="button"
-                   ><i class="fab fa-instagram"></i
-                  ></a>
+                   ><i class="fa-brands fa-instagram"></i></a>
         
                 <!-- Linkedin -->
                 <a
