planets names added

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                           Destination
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Destination 1</a></li>
-                          <li><a class="dropdown-item" href="#">Destination 2</a></li>
-                          <li><a class="dropdown-item" href="#">Destination 3</a></li>
-                          <li><a class="dropdown-item" href="#">Destination 4</a></li>
+                          <li><a class="dropdown-item" href="#"> Icy Chuckles</a></li>
+                          <li><a class="dropdown-item" href="#"> Mirthful Magma Madness</a></li>
+                          <li><a class="dropdown-item" href="#"> Endless Sandscape</a></li>
+                          <li><a class="dropdown-item" href="#"> Verdant Haven</a></li>
                         </ul>
                       </li>
                       <li class="nav-item">
